# btfy

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md
.github/ISSUE_TEMPLATE/: issue-template.md
.github/workflows/: lint.yaml  test.yaml
commands/: btfly-cli.sh  btfy-cli  run.sh
docs/: faq.md  installation.md  temperature_script_example.md
example/: dummy.py  dummy.sh  open-meteo  open-meteo.py  open-meteo.sh
src/: api.rs  beacon.rs  blockchain.rs  config.json  config.rs  main.rs  node.rs  p2p.rs  state.rs  update.rs  util.rs
src/beacon/: target.geojson
src/blockchain/: block.rs  chain.rs  coinbase.rs  genesis.txt  transaction.rs  utxo.rs
src/util/: key.rs  progressbar.rs  signature.rs  vdf.rs
