[package]
name = "btfy"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
chrono = "0.4.44"
clap = { version = "4.6.1", features = ["derive"] }
futures = "0.3.32"
geojson = "1.0.0"
hex = "0.4.3"
log = "0.4.29"
regex = "1.12.3"
hyper = { version = "1.10.1", default-features = false }
reqwest = { version = "0.13.2", default-features = false, features = ["json", "query"] }
rsa = { version = "0.9.10", features = ["sha2", "serde"] }
serde = { version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"
sha2 = "0.11.0"
simple_logger = "5.2.0"
tokio = { version = "1.51.0", features = ["full"] }
tower-http = { version = "0.6.8" }
vdf = "0.1.0"
bitcode = "0.6.9"
